# Xplorer-OMX-AI

./: .gitignore  README.md
gazebo_sim/: README_SIM.md
gazebo_sim/docker/: Dockerfile  docker-compose.yml
gazebo_sim/rezultate/: campania_campania_sim_20260611_200420.json
gazebo_sim/ros2_ws/src/xplorer_omx_sim/: package.xml  setup.cfg  setup.py
gazebo_sim/ros2_ws/src/xplorer_omx_sim/config/: bridge.yaml  nav2_params.yaml  pois.yaml  sim.rviz
gazebo_sim/ros2_ws/src/xplorer_omx_sim/launch/: manip.launch.py  nav2.launch.py  rviz.launch.py  sim.launch.py
gazebo_sim/ros2_ws/src/xplorer_omx_sim/maps/: lab_map.pgm  lab_map.yaml
gazebo_sim/ros2_ws/src/xplorer_omx_sim/tools/: fk_data.json  flatten_onshape_urdf.py  gen_scene.py
gazebo_sim/ros2_ws/src/xplorer_omx_sim/urdf/: xplorer_omx.urdf  xplorer_omx_real.urdf
gazebo_sim/ros2_ws/src/xplorer_omx_sim/worlds/: lab_world.sdf
gazebo_sim/ros2_ws/src/xplorer_omx_sim/xplorer_omx_sim/: go_collect.py  ground_truth_mux.py  manipulation_infer_node_sim.py  mission_multi_poi.py  mission_orchestrator_sim.py  reset_objects.py  sim_doctor.py
real_robot/: README_REAL.md  capture_arm_pose.py  capture_pose.py  go_collect_real.py  infer_loop_v5.py  manipulation_infer_node.py  record_campaign.sh  run_mission_e2e.py  start_all.sh  start_jetson.sh  verify_lenovo.sh  verify_system.sh
real_robot/rezultate/: campania_campania_reala_20260616_122742.json  campania_campania_reala_2_20260616_135945.json  campania_campania_reala_3_20260616_140557.json  campania_campania_reala_4_20260616_142348.json  (+2 more)
(+21 files in other folders)
