<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xplorer_omx_sim</name>
  <version>1.0.0</version>
  <description>
    Simulare Gazebo (Harmonic) a ansamblului Xplorer-A + brat OMX-AI pentru
    scenariul de orchestrare end-to-end: Nav2 HOME -&gt; POI-A -&gt; trigger
    /manip_trigger -&gt; episod manipulare -&gt; /manip_done -&gt; Nav2 -&gt; HOME.
    Replica functionala a arhitecturii reale RPi5 (Jazzy) + Jetson (Humble).
  </description>
  <maintainer email="nitu.george15@gmail.com">Nitu George-Catalin</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>tf2_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
